# Rmlx-serve

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/rmlx-serve-api/: Cargo.toml
crates/rmlx-serve-api/src/: convert.rs  error.rs  lib.rs  middleware.rs  router.rs  sse.rs  state.rs
crates/rmlx-serve-api/src/handlers/: anthropic.rs  chat.rs  completions.rs  embeddings.rs  health.rs  mcp.rs  mod.rs  models.rs
crates/rmlx-serve-api/src/mcp/: client.rs  config.rs  manager.rs  mod.rs  security.rs
crates/rmlx-serve-cache/: Cargo.toml
crates/rmlx-serve-cache/src/: batch_cache.rs  cache_ops.rs  error.rs  kv_cache.rs  lib.rs  memory.rs  paged_cache.rs  prefix_cache.rs  prompt_cache.rs  quantized_cache.rs  rotating_cache.rs
crates/rmlx-serve-cli/: Cargo.toml
crates/rmlx-serve-cli/src/: args.rs  bench.rs  generate.rs  main.rs  serve.rs  stub_engine.rs
crates/rmlx-serve-engine/: Cargo.toml
crates/rmlx-serve-engine/src/: batched.rs  distributed.rs  ep.rs  error.rs  generation.rs  hardware.rs  lib.rs  simple.rs  traits.rs
crates/rmlx-serve-engine/src/distributed/: communicator.rs  launcher.rs  mod.rs  worker.rs
crates/rmlx-serve-models/: Cargo.toml
crates/rmlx-serve-models/src/: error.rs  lib.rs  loader.rs  mask.rs  registry.rs  rope.rs  traits.rs  transformer.rs
crates/rmlx-serve-sampling/: Cargo.toml
crates/rmlx-serve-sampling/src/: error.rs  lib.rs  pipeline.rs  processors.rs  sampler.rs
crates/rmlx-serve-scheduler/: Cargo.toml
crates/rmlx-serve-scheduler/src/: batch.rs  batch_generator.rs  error.rs  lib.rs  policy.rs  scheduler.rs
crates/rmlx-serve-speculative/: Cargo.toml
crates/rmlx-serve-speculative/src/: draft_model.rs  error.rs  lib.rs  metrics.rs  mtp.rs  ngram.rs  proposal.rs  rejection.rs  runtime.rs
crates/rmlx-serve-tokenizer/: Cargo.toml
crates/rmlx-serve-tokenizer/src/: chat_template.rs  detokenizer.rs  error.rs  lib.rs  tokenizer.rs
crates/rmlx-serve-tools/: Cargo.toml
crates/rmlx-serve-tools/src/: lib.rs  reasoning_parser.rs  tool_parser.rs  types.rs
crates/rmlx-serve-tools/src/parsers/: auto.rs  deepseek.rs  generic.rs  hermes.rs  llama.rs  mistral.rs  mod.rs  qwen.rs  utils.rs
crates/rmlx-serve-tools/src/reasoning/: deepseek_r1.rs  gpt_oss.rs  harmony.rs  mod.rs  qwen3.rs  think.rs
crates/rmlx-serve-types/: Cargo.toml
crates/rmlx-serve-types/src/: anthropic.rs  config.rs  error.rs  lib.rs  mcp.rs  openai.rs  request.rs
crates/rmlx-serve-weights/: Cargo.toml
crates/rmlx-serve-weights/src/: config.rs  error.rs  lib.rs  loader.rs  mapper.rs  quantization.rs  sanitize.rs
